tests/errors/syn_call3.java
public class syn_call3{
public static void main(String[] args){
 method( )
}
}